remove extra and needed information from README

--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
       <body>
         <h1 id="freelance-co-working">Freelance Co-Working</h1>
 <p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 1.6.5.</p>
-<h2 id="-research-inspire-brainstorm">&gt; Research - Inspire - Brainstorm</h2>
+<h2 id="research-inspire-brainstorm">Research - Inspire - Brainstorm</h2>
 <ul>
 <li>Client Request&#39;s<ul>
 <li>&quot;We just finished remodeling our space. We&#39;re really proud of it. We want our online presence to mirror our in-person presence, to attract people that would really enjoy working in our environment.&quot;</li>
@@ -41,44 +41,17 @@
 <br></p>
 <h4 id="client-colors">Client Colors</h4>
 <ul>
-<li><strong><span style="color:green;"> Green </span></strong><ul>
-<li>Physical Effects<ul>
-<li>What happens to your body in the presence of green? Your pituitary gland is stimulated. Your muscles are more relaxed, and your blood histamine levels increase, which leads to a decrease in allergy symptoms and dilated blood vessels, aiding in smoother muscle contractions. In short, green is calming, stress-relieving, and – a bit paradoxically – invigorating. It’s been shown to improve reading ability and creativity.</li>
-</ul>
-</li>
-<li>Symbolism<ul>
-<li>Green stands for balance, nature, spring, and rebirth. It’s the symbol of prosperity, freshness, and progress. The Green Party in the US is inextricably tied to ecological and progressive causes, and a “greenback” is another term for our paper currency. In Japanese culture, green is associated with eternal life, and it is the sacred color of Islam, representing respect and the prophet Muhammad.</li>
-</ul>
-</li>
-<li>Positive Associations<ul>
-<li>We associate green with vitality, fresh growth, and wealth.   We generally think of it as a balanced, healthy, and youthful. We use green in design for spaces intended to foster creativity and productivity, and we associate green with progress – think about giving a project the “green light.”</li>
-</ul>
-</li>
-<li>Negative Associations<ul>
-<li>Someone who feels sick might look “green around the gills,”...</li>
-<li>Envy and greed.</li>
-</ul>
-</li>
-</ul>
-</li>
+<li><strong><span style="color:green;"> Green </span></strong></li>
 </ul>
 <ul>
-<li><strong><span style="color:pink;">Pink / Salmon - love</span></strong><ul>
-<li>Pink is the color of happiness and is sometimes seen as lighthearted.</li>
-<li>Stimulates energy and can increase the blood pressure, respiration, heartbeat, and pulse rate.</li>
-<li>Encourage action and confidence. Reduction in erratic behavior.</li>
-</ul>
-</li>
+<li><strong><span style="color:pink;">Pink / Salmon - love</span></strong></li>
 </ul>
 <h4 id="possible-colors">Possible Colors</h4>
 <ul>
-<li><strong><span style="color:gold;">Gold (for luxurious)</span></strong><ul>
-<li>Green correlates with growth, wealth, and cash, gold with building a fortune, abundance, and positive feelings, and red is a color of success, strength, and good luck.</li>
-</ul>
+<li><p><strong><span style="color:gold;">Gold (for luxurious)</span></strong></p>
 </li>
-<li><strong><span style="color:silver;">Silver</span></strong><ul>
-<li>the metallic refined, distinguished color of riches, has cool properties like gray, but is more fun, lively, and playful. The color silver is associated with meanings of industrial, sleek, high-tech, and modern, as well as ornate, glamourous, graceful, sophisticated, and elegant.</li>
-<li>affects the mind and body as a conductor and communicator that aids in public speaking and eloquence. Silver is believed to draw negative energy out of the body and replace it with positive energy.</li>
+<li><p><strong><span style="color:silver;">Silver</span></strong></p>
+<ul>
 <li>Where gold is masculine, silver is considered as feminine energy.</li>
 </ul>
 </li>
