add setup instructions to README

--- a/README.html
+++ b/README.html
@@ -77,16 +77,36 @@
 <h2 id="sketch-a-a-wild-sketch-appears-a-">Sketch <a>A wild sketch appears!</a></h2>
 <p><img src="src/assets/sketches/phone-sketch.jpeg" height="400"/></p>
 <h2 id="setup-installation-requirements">Setup/Installation Requirements</h2>
-<h3 id="i-backend">I. Backend</h3>
-<p>Add instructions.</p>
-<h3 id="ii-node-npm-installs">II. Node &amp; NPM Installs</h3>
-<ol>
-<li>Install Node.js on local machine.</li>
-<li>Install TypeScript globally: <code>npm install -g typescript</code></li>
-<li>Install Angular CLI globally: <code>npm install -g @angular/cli@1.7.4</code></li>
-</ol>
-<h3 id="iii-view-project">III. View Project</h3>
-<p>Add instructions.</p>
+<h4 id="pre-requisites">Pre-requisites</h4>
+<h3 id="npm-node-installation">NPM &amp; Node Installation</h3>
+<ul>
+<li>Install Node.js<ul>
+<li><a href="https://www.npmjs.com/get-npm">https://www.npmjs.com/get-npm</a></li>
+</ul>
+</li>
+</ul>
+<ul>
+<li><p>Install Angularcli</p>
+<p>  $ npm install -g @<a href="mailto:angular/cli@1.6.5">angular/cli@1.6.5</a></p>
+</li>
+</ul>
+<h3 id="clone">Clone</h3>
+<ul>
+<li><p>Clone this repo to your local machine from: <a href="https://github.com/adrianmess/freelance-co-working">https://github.com/adrianmess/freelance-co-working</a></p>
+<pre><code>$ git clone https://github.com/adrianmess/freelance-co-working
+</code></pre></li>
+</ul>
+<p>Open <strong>site-rebuild</strong> folder from terminal.</p>
+<h3 id="npm-installation">NPM Installation</h3>
+<pre><code>  $ npm install
+</code></pre><h2 id="start-development-server">Start Development server</h2>
+<p>Run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
+<ul>
+<li>The following command will start the server and automatically open the browser.      <pre><code>$ng serve --open
+</code></pre></li>
+</ul>
+<h2 id="further-help">Further help</h2>
+<p>To get more help on the Angular CLI use <code>ng help</code> or go check out the <a href="https://github.com/angular/angular-cli/blob/master/README.md">Angular CLI README</a>.</p>
 <h2 id="known-bugs">Known Bugs</h2>
 <ul>
 <li>None.</li>
@@ -94,6 +114,10 @@
 <h2 id="technologies-used">Technologies Used</h2>
 <ul>
 <li>Angular</li>
+<li>Node.js</li>
+<li>Bootstrap 4</li>
+<li>JQuery</li>
+<li>Popper JS</li>
 </ul>
 <h2 id="development-server">Development server</h2>
 <p>Run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
@@ -101,6 +125,11 @@
 <p>Run <code>ng build</code> to build the project. The build artifacts will be stored in the <code>dist/</code> directory. Use the <code>-prod</code> flag for a production build.</p>
 <h2 id="further-help">Further help</h2>
 <p>To get more help on the Angular CLI use <code>ng help</code> or go check out the <a href="https://github.com/angular/angular-cli/blob/master/README.md">Angular CLI README</a>.</p>
+<h2 id="license">License</h2>
+<ul>
+<li>GPL</li>
+</ul>
+<p>Adrian Messado © 2018</p>
 <p><link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.css"><style>
 <!--
 .markdown-body {
