add specs and custom icons to README, reduce image height

--- a/README.html
+++ b/README.html
@@ -6,76 +6,74 @@
       <body>
         <h1 id="freelance-co-working">Freelance Co-Working</h1>
 <p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 1.6.5.</p>
-<h2 id="research-inspire-brainstorm">Research - Inspire - Brainstorm</h2>
+<h2 id="client-request-s">Client Request&#39;s</h2>
 <ul>
-<li>Client Request&#39;s<ul>
 <li>&quot;We just finished remodeling our space. We&#39;re really proud of it. We want our online presence to mirror our in-person presence, to attract people that would really enjoy working in our environment.&quot;</li>
 <li>&quot;We want our space--no, our whole company--to feel a little luxurious, cool, and high-end; yet still absolutely 100% welcoming, approachable and inclusive to anyone and everyone. A safe, comfortable, and productive work environment, you know?&quot;</li>
 <li>&quot;I also think it&#39;s really important convey our unique personality. It&#39;s what sets us apart from the &#39;big guys&#39; in the coworking field. You know, places like WeWork and TechSpace. We think we&#39;re more funky, more local, less corporate, and a little more fun.&quot;</li>
 <li>I want to avoid catering to tech. You walk into some of these other coworking spaces, and you only ever see people working on code. That&#39;s great, but we&#39;d also love to see artists, daytraders, writers, counselors, more traditional business people--you know, anyone and everyone--in our space.&quot;</li>
 <li>&quot;It should also be easy to see what amenities we have. We have an on-site coffee counter, both communal working areas and private offices, high-speed internet, printing and faxing services, and we usually have a fun, optional activity on Thursday afternoons. Like yoga, maybe a fun complementary food, or like...I don&#39;t know, a craft or something?&quot;</li>
 </ul>
+<h4 id="client-colors">Client Colors</h4>
+<ul>
+<li><strong><span style="color:green;"> Green </span></strong></li>
+<li><strong><span style="color:pink;">Pink / Salmon - love</span></strong><h4 id="colors-to-consider">Colors to consider</h4>
+<ul>
+<li><strong><span style="color:gold;">Gold (for luxurious)</span></strong></li>
+<li><strong><span style="color:silver;">Silver</span></strong><ul>
+<li>Where gold is masculine, silver is considered as feminine energy.</li>
+</ul>
+</li>
+<li>Metallic
+<br>
+<br>
+<br></li>
+</ul>
 </li>
 </ul>
 <h4 id="photo-s-of-working-space">Photo&#39;s of working space</h4>
 <p><div class="flex-container">
-<img src="/src/assets/client-photos/coffee-counter-area.jpg" height="200">
-<img src="/src/assets/client-photos/front-entrance-looking-out.jpg" height="200">
-<img src="/src/assets/client-photos/front-entrance.jpg" height="200">
-<img src="/src/assets/client-photos/communal-workspace.jpg" height="200"><br>
-<img src="/src/assets/client-photos/one-meeting-area.jpg" height="200">
-<img src="/src/assets/client-photos/coffee-counter-area.jpg" height="200"></p>
+<img src="/src/assets/client-photos/coffee-counter-area.jpg" height="100">
+<img src="/src/assets/client-photos/front-entrance-looking-out.jpg" height="100">
+<img src="/src/assets/client-photos/front-entrance.jpg" height="100">
+<br>
+<img src="/src/assets/client-photos/communal-workspace.jpg" height="100">
+<br>
+<img src="/src/assets/client-photos/one-meeting-area.jpg" height="100">
+<img src="/src/assets/client-photos/coffee-counter-area.jpg" height="100"></p>
 <div>
 
 <h4 id="client-logo">Client Logo</h4>
-<p><img src="/src/assets/client-photos/logo/love-logo-text-black.png" height="75">
+<p><br>
+<img src="/src/assets/client-photos/logo/love-logo-text-black.png" height="75">
 <img src="/src/assets/client-photos/logo/love-child-social-logo-black.png" height="75">
 <img src="/src/assets/client-photos/logo/love-group-logo-white.png" height="75" style="background-color:#f6a294;">
 <img src="/src/assets/client-photos/logo/love-child-social-logo-white.png" height="75" style="background-color:#f6a294;">
 <br>
 <br></p>
-<p><img src="/src/assets/client-photos/logo/1heart.png">
-<img src="/src/assets/client-photos/logo/2hearts.png">
-<img src="/src/assets/client-photos/logo/3hearts.png"></p>
-<p><br>
-<br></p>
-<h4 id="client-colors">Client Colors</h4>
-<ul>
-<li><strong><span style="color:green;"> Green </span></strong></li>
-</ul>
-<ul>
-<li><strong><span style="color:pink;">Pink / Salmon - love</span></strong></li>
-</ul>
-<h4 id="possible-colors">Possible Colors</h4>
-<ul>
-<li><p><strong><span style="color:gold;">Gold (for luxurious)</span></strong></p>
-</li>
-<li><p><strong><span style="color:silver;">Silver</span></strong></p>
-<ul>
-<li>Where gold is masculine, silver is considered as feminine energy.</li>
-</ul>
-</li>
-<li>Metallic</li>
-</ul>
-<p><br>
+<h4 id="custom-icon-logos">Custom Icon Logos</h4>
+<p><img src="/src/assets/images/logo-green.png">
+<img src="/src/assets/images/logo-square-black.png">
 <br>
 <br></p>
-<h4 id="ideas-">Ideas:</h4>
+<h2 id="user-story">User Story</h2>
 <ul>
-<li>Animate heart Logo<ul>
-<li>Animated with toroidal effect, heart spinning around it&#39;s center.</li>
+<li>As a user i want to be able to navigate using links in HeaderComponent</li>
+<li>As a user i want the images to and items to resize based on the size of the screen.</li>
+</ul>
+<h2 id="specifications">Specifications</h2>
+<ul>
+<li>Use @media queries to plans and</li>
+<li>Use @media queries to hide/show menu button on  header<ul>
+<li>CSS Grid used for &#39;Human&#39;s Watchlist&#39; section.</li>
+<li>Flex Wrap used for &#39;Top Picks For Human&#39; section.</li>
+<li>Flex Wrap used for &#39;Hulu Originals&#39; section.</li>
+<li>CSS Grid used for &#39;TV&#39;s Funniest Families&#39; section.</li>
+<li>Flex Used for Footer</li>
 </ul>
 </li>
-<li>Animate Grow link<ul>
-<li>Animate with growing tree - symbolizes growth, goes with flexibility of yoga, and fits with green theme<ul>
-<li>animation during mouse hover or after mouse click</li>
 </ul>
-</li>
-</ul>
-</li>
-</ul>
-<h2 id="sketch-a-a-wild-sketch-appears-a-">Sketch <a>A wild sketch appears!</a></h2>
-<p><img src="src/assets/sketches/phone-sketch.jpeg" height="400"/></p>
+<h2 id="diagram">Diagram</h2>
 <h2 id="setup-installation-requirements">Setup/Installation Requirements</h2>
 <h4 id="pre-requisites">Pre-requisites</h4>
 <h3 id="npm-node-installation">NPM &amp; Node Installation</h3>
@@ -96,7 +94,7 @@
 <pre><code>$ git clone https://github.com/adrianmess/freelance-co-working
 </code></pre></li>
 </ul>
-<p>Open <strong>site-rebuild</strong> folder from terminal.</p>
+<p>Open <strong>freelance-co-working</strong> folder from terminal.</p>
 <h3 id="npm-installation">NPM Installation</h3>
 <pre><code>  $ npm install
 </code></pre><h2 id="start-development-server">Start Development server</h2>
@@ -118,6 +116,7 @@
 <li>Bootstrap 4</li>
 <li>JQuery</li>
 <li>Popper JS</li>
+<li>Prepros - scss to css compiler</li>
 </ul>
 <h2 id="development-server">Development server</h2>
 <p>Run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
@@ -130,24 +129,11 @@
 <li>GPL</li>
 </ul>
 <p>Adrian Messado © 2018</p>
-<p><link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.css"><style>
-<!--
-.markdown-body {
-  box-sizing: border-box;
-  min-width: 200px;
-  max-width: 980px;
-  margin: 0 auto;
-  padding: 45px;
-} --></p>
+<p><link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.css"><style></p>
 <p>.flex-container {
   display: flex;
-}
-<!-- @media (max-width: 767px) {
-    .markdown-body {
-        padding: 15px;
-    }
-} -->
-</style></p>
+}</p>
+<p></style></p>
 
       </body>
     </html>
