--- a/README.html
+++ b/README.html
@@ -64,7 +64,7 @@
 <li>after realizing to much of my site was directly influenced from Love Child Social&#39;s site i attempted to redesign my site</li>
 </ul>
 </li>
-<li>Ended up trying to create a modern, somewhat minimalist feel. </li>
+<li>Ended up trying to create a modern, somewhat minimalist feel.</li>
 </ul>
 <h2 id="user-story">User Story</h2>
 <ul>
@@ -85,7 +85,8 @@
 <li>Use @media queries to auto resize plans</li>
 <li>Use @media queries to hide/show menu button on header</li>
 <li>Use flex to create auto adjusting grid in gallery</li>
-<li>use scss and mixins to make DRY code.
+<li>use scss and mixins to make DRY code.</li>
+<li>Use Prepros app to automatically compile scss to css
 <br>
 <img src="/src/assets/images/README/header.gif">
 <br>
@@ -136,6 +137,7 @@
 <li>Bootstrap 4</li>
 <li>JQuery</li>
 <li>Popper JS</li>
+<li>SCSS </li>
 <li>Prepros - scss to css compiler</li>
 </ul>
 <h2 id="development-server">Development server</h2>
