add research section, add more user stories, add more to specifications, add gifs to specifications

--- a/README.html
+++ b/README.html
@@ -56,22 +56,42 @@
 <img src="/src/assets/images/logo-square-black.png">
 <br>
 <br></p>
+<h2 id="research">Research</h2>
+<ul>
+<li>Referenced the top 30 co working spaces for ideas</li>
+<li>Ran accross love child social, which appeared to be the client that supplied the images.</li>
+<li>I started designing my site largely off love child social&#39;s site but realized i was realying to much on their designs instead of coming up with my own idea&#39;s and creating and using my ideas.<ul>
+<li>after realizing to much of my site was directly influenced from Love Child Social&#39;s site i attempted to redesign my site</li>
+</ul>
+</li>
+<li>Ended up trying to create a modern, somewhat minimalist feel. </li>
+</ul>
 <h2 id="user-story">User Story</h2>
 <ul>
 <li>As a user i want to be able to navigate using links in HeaderComponent</li>
 <li>As a user i want the images to and items to resize based on the size of the screen.</li>
+<li>As a user I want to be able to set a tour date</li>
+<li>As a user I want to be able to sign-in</li>
+<li>As a user i want to be able to see Gallery of the co-working spaces<ul>
+<li>As a user i want the gallery to automatically adjust according to the web page space.</li>
+</ul>
+</li>
+<li>As a user I want to be able to contact them via social media</li>
+<li>As a user I want to see their hours of operation</li>
+<li>As a user I want to see the available plans without have to search for them.   </li>
 </ul>
 <h2 id="specifications">Specifications</h2>
 <ul>
-<li>Use @media queries to plans and</li>
-<li>Use @media queries to hide/show menu button on  header<ul>
-<li>CSS Grid used for &#39;Human&#39;s Watchlist&#39; section.</li>
-<li>Flex Wrap used for &#39;Top Picks For Human&#39; section.</li>
-<li>Flex Wrap used for &#39;Hulu Originals&#39; section.</li>
-<li>CSS Grid used for &#39;TV&#39;s Funniest Families&#39; section.</li>
-<li>Flex Used for Footer</li>
-</ul>
-</li>
+<li>Use @media queries to auto resize plans</li>
+<li>Use @media queries to hide/show menu button on header</li>
+<li>Use flex to create auto adjusting grid in gallery</li>
+<li>use scss and mixins to make DRY code.
+<br>
+<img src="/src/assets/images/README/header.gif">
+<br>
+<img src="/src/assets/images/README/plans.gif">
+<br>
+<img src="/src/assets/images/README/gallery.gif"></li>
 </ul>
 <h2 id="diagram">Diagram</h2>
 <h2 id="setup-installation-requirements">Setup/Installation Requirements</h2>
